name:                pure-lifted
version:             0.8.0.0
homepage:            purehs.org/doc/pure-lifted
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-lifted.git

library
  build-depends:
    base,
    pure-default,
    pure-txt

  hs-source-dirs: src

  exposed-modules:
    Pure.Animation
    Pure.IdleWork
    Pure.Data.Lifted

  if (impl(ghcjs))
    build-depends:
      ghcjs-base

    js-sources: js/ric-shim.js

  default-language: Haskell2010
